--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
          href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+      <p id="add-new-elem">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+        <div class="task-wrapper">
           <input id="new-task"class="task" type="text">
           <button>Add</button>
         </div>
