--- a/index.html
+++ b/index.html
@@ -4,45 +4,45 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" >
     <link rel="stylesheet" href="style.css"  media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="body">
     <div class="header">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" class="header-img">
       <a class="more-inf"
          href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="centered-main-page-element">
       <p id="add-new-elem">
-        <label for="new-task">Add Item</label>
+        <label for="new-task" class="new-task ">Add Item</label>
         <div class="task-wrapper">
-          <input id="new-task"class="task" type="text">
-          <button>Add</button>
+          <input id="new-task" class="task input-text input-new-task edit-input" type="text">
+          <button class="button">Add</button>
         </div>
        </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+      <h3 class="h3">Todo</h3>
+      <ul id="incomplete-tasks" class="list">
+        <li class="li">
+          <input type="checkbox" class="checkbox">
+          <label class="task task-lable">Pay Bills</label>
+          <input type="text" class="task input-text edit-input" >
+          <button class="edit button">Edit</button>
+          <button class="delete button"><img src="./remove.svg" class="remove-img"></button>
         </li>
-        <li class="edit-mode">
+        <li class="edit-mode li">
           <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <label class="task task-lable hide">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task input-text edit-input">
+          <button class="edit button">Save</button>
+          <button class="delete button"><img src="./remove.svg" class="remove-img"></button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li> 
+      <h3 class="h3">Completed</h3>
+      <ul id="completed-tasks" class="list">
+        <li class="li"> 
           <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <label class="task task-lable">See the Doctor</label>
+          <input type="text" class="task input-text edit-input">
+          <button class="edit button">Edit</button>
+          <button class="delete button"><img src="./remove.svg" class="remove-img"></button>
         </li>
       </ul>
     </div>
