--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
           <label class="task task-lable">Pay Bills</label>
           <input type="text" class="task input-text edit-input" >
           <button class="edit button">Edit</button>
-          <button class="delete button"><img src="./remove.svg" class="remove-img"></button>
+          <button class="delete button"><img src="./remove.svg" alt="remove-button" class="remove-img"></button>
         </li>
         <li class="edit-mode li">
           <input type="checkbox">
           <label class="task task-lable hide">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task input-text edit-input">
           <button class="edit button">Save</button>
-          <button class="delete button"><img src="./remove.svg" class="remove-img"></button>
+          <button class="delete button"><img src="./remove.svg" alt="remove-button" class="remove-img"></button>
         </li>
       </ul>
       <h3 class="h3">Completed</h3>
@@ -42,7 +42,7 @@
           <label class="task task-lable">See the Doctor</label>
           <input type="text" class="task input-text edit-input">
           <button class="edit button">Edit</button>
-          <button class="delete button"><img src="./remove.svg" class="remove-img"></button>
+          <button class="delete button"><img src="./remove.svg" alt="remove-button" class="remove-img"></button>
         </li>
       </ul>
     </div>
