--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body class="body">
     <div class="header">
-      <img src="./eisenhower-matrix.jpg" class="header-img">
+      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix" class="header-img">
       <a class="more-inf"
          href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
@@ -32,7 +32,7 @@
           <label class="task task-lable hide">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task input-text edit-input">
           <button class="edit button">Save</button>
-          <button class="delete button"><img src="./remove.svg"  class="remove-img"></button>
+          <button class="delete button"><img src="./remove.svg" alt="remove-button" class="remove-img"></button>
         </li>
       </ul>
       <h3 class="h3">Completed</h3>
@@ -42,7 +42,7 @@
           <label class="task task-lable">See the Doctor</label>
           <input type="text" class="task input-text edit-input">
           <button class="edit button">Edit</button>
-          <button class="delete button"><img src="./remove.svg" class="remove-img"></button>
+          <button class="delete button"><img src="./remove.svg" alt="remove-button" class="remove-img"></button>
         </li>
       </ul>
     </div>
