refactor (extended, 1.3): change some class name

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
   <body class="body">
     <aside class="header">
-      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix" class="header-img">
-      <a class="more-inf"
+      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix" class="header__img">
+      <a class="header__link"
          href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </aside>
     <main>
